--- a/css/registroCliente.css
+++ b/css/registroCliente.css
@@ -16,7 +16,7 @@
 
 
 html{
-    background: url("https://media-tienda-esquina-6546601.s3.us-east-2.amazonaws.com/fondo_interfaz.svg");
+    background: url("../img/fondo_interfaz.png");
     background-size: 100%;
 
   }
