--- a/css/registroCliente.css
+++ b/css/registroCliente.css
@@ -73,6 +73,17 @@ html{
     color: var(--color-texto-1);
     box-shadow: var(--sombra-4);
   }
+  input[id="codigo"]{
+    font-size: 20px;
+    font-weight: 600;
+    padding: 5px 5px 5px 10px;
+    border: none;
+    text-align: center;
+    border-radius: 10px;
+    outline: none;
+    color: var(--color-texto-1);
+    box-shadow: var(--sombra-4);
+  }
   input[type="submit"]{
     border-radius: 20px;
     display: flex;
