--- a/css/styles.css
+++ b/css/styles.css
@@ -2,33 +2,34 @@
 * {
   margin: 0;
   padding: 0;
-
 }
-:root{
-  --color-1:rgb(71, 164, 192);
+:root {
+  --color-1: rgb(71, 164, 192);
   --color-2: rgb(255, 255, 255);
   --color-3: rgb(216, 81, 81);
   --color-4: rgb(48, 135, 146);
   --color-texto-1: rgb(0, 42, 69);
   --color-texto-2: white;
   --sombra: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  --sombra-4: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px inset;
-  --sombra-2: rgba(255, 255, 255, 0.823) 0px 3px 6px, rgba(255, 255, 255, 0.823) 0px 3px 6px;
-  --sombra-3: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  --sombra-4: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+    rgba(0, 0, 0, 0.23) 0px 3px 6px inset;
+  --sombra-2: rgba(255, 255, 255, 0.823) 0px 3px 6px,
+    rgba(255, 255, 255, 0.823) 0px 3px 6px;
+  --sombra-3: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
-body{
+body {
   font-family: Arial, sans-serif, Claibri, verdana;
 }
 /* CONTENIDO INICIAL */
-.cont-estructura{
+.cont-estructura {
   display: flex;
   flex-direction: column;
-
 }
 
 /* PRIMERA FILA ECABEZADO */
-.head-page-in{
+.head-page-in {
   display: flex;
   flex-direction: column;
   background-color: var(--color-1);
@@ -37,14 +38,14 @@ body{
   gap: 1em;
   border-bottom: 0.5px solid gray;
 }
-.cont-filtro-name{
+.cont-filtro-name {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 5em;
 }
 
-.cont-name-empresa{
+.cont-name-empresa {
   width: max-content;
   display: flex;
   flex-direction: column;
@@ -57,17 +58,17 @@ body{
   font-size: 10px;
   font-weight: 800;
   box-shadow: var(--sombra);
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
-.fa-shop{
+.fa-shop {
   font-size: 30px;
 }
-.cont-name-empresa:hover{
+.cont-name-empresa:hover {
   transform: translatey(-5%);
   color: var(--color-texto-2);
   box-shadow: var(--sombra-2);
 }
-.cont-filtro{
+.cont-filtro {
   display: flex;
   width: 40em;
   justify-content: flex-start;
@@ -76,9 +77,8 @@ body{
   border: 1px solid gray;
   border-radius: 20px;
   padding-left: 7px;
-
 }
-.style-input{
+.style-input {
   height: max-content;
   font-size: 20px;
   border-radius: 20px;
@@ -89,27 +89,27 @@ body{
   outline-offset: none;
   outline: none;
 }
-.style-input::before{
+.style-input::before {
   outline: none;
   border: none;
 }
-.style-btn-filtro{
-border-radius: 0px 20px 20px 0px;
+.style-btn-filtro {
+  border-radius: 0px 20px 20px 0px;
   border: none;
   border-left: 1px solid gray;
   padding: 6px 10px 6px 10px;
   cursor: pointer;
 }
-.cont-perfil{
+.cont-perfil {
   width: 15em;
   display: flex;
   justify-content: space-evenly;
 }
 
-.icon{
+.icon {
   font-size: 20px;
 }
-.btn-options{
+.btn-options {
   border: none;
   padding: 5px 10px 5px 10px;
   border-radius: 10px;
@@ -118,15 +118,15 @@ border-radius: 0px 20px 20px 0px;
   cursor: pointer;
   outline: none;
   box-shadow: var(--sombra);
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
-.btn-options:hover{
+.btn-options:hover {
   transform: translatey(-10%);
   color: var(--color-texto-2);
   box-shadow: var(--sombra-2);
 }
 
-.cantidad-car{
+.cantidad-car {
   display: none;
   background-color: red;
   border-radius: 100%;
@@ -140,27 +140,27 @@ border-radius: 0px 20px 20px 0px;
   font-weight: 700;
   position: absolute;
   margin-top: -20px;
-  margin-left:-25px ;
+  margin-left: -25px;
 }
 /* FIN PRIMERA FILA ENCABEZADO */
 
 /* MENU USUARIO */
-.cont-menu{
+.cont-menu {
   display: flex;
   justify-content: space-around;
 }
-.btn-menu-option{
+.btn-menu-option {
   font-size: 20px;
   color: var(--color-texto-1);
   font-weight: 800;
   cursor: pointer;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
-.btn-menu-option:hover{
+.btn-menu-option:hover {
   transform: translateY(-10%);
   text-shadow: var(--sombra-2);
 }
-.style-select{
+.style-select {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -173,32 +173,32 @@ border-radius: 0px 20px 20px 0px;
   outline: none;
   font-weight: 800;
   color: var(--color-texto-1);
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
-.style-select:hover{
+.style-select:hover {
   transform: translateY(-10%);
   text-shadow: var(--sombra-2);
 }
-.style-select option[value="0"]{
-display: none;
+.style-select option[value="0"] {
+  display: none;
 }
 
 /* FIN MENU USARIO */
 
 /* CONTENIDO DE LAS OPCIONES   */
-.cont-options-select{
+.cont-options-select {
   display: flex;
   height: max-content;
   padding: 20px;
   flex: 1;
 }
-.cont-ajustable{
+.cont-ajustable {
   display: flex;
   flex-wrap: wrap;
   gap: 2em;
   justify-content: center;
 }
-.cont-option{
+.cont-option {
   display: flex;
   height: max-content;
   flex: 1;
@@ -207,82 +207,84 @@ display: none;
 .card {
   display: flex;
   flex-direction: column;
-  padding: .5em;
-  background: #a2cbd266;
-  width: 14em;
-  border-radius: 10px;
+  padding: 1.5rem;
+  background-image: linear-gradient(to bottom right, #faf5ff 50%, #f0fdf4 50%);
+  background-color: hsl(0 0% 100%);
+  width: 232px;
+  border-radius: 0.5rem;
   overflow: visible;
-  box-shadow: var(--sombra);
- }
- .token-categ{
+  box-shadow: 0 0 #0000, 0 0 #0000, 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  border: 1px solid rgb(233 213 255 / 1);
+}
+.token-categ {
   display: none;
-
- }
- .card-img {
+}
+.card-img {
   display: flex;
   background-color: var(--color-1);
   height: 10em;
   overflow: hidden;
   object-fit: cover;
-  border-radius: .5rem;
-  box-shadow: var(--sombra);
-  transition: .3s ease;
- }
-.card-img img{
-width: 100%;
-
+  border-radius: 0.5rem;
+  transition: 0.3s ease;
 }
- .card-info {
+.card-img img {
+  width: 100%;
+}
+.card-info {
   padding-top: 5px;
 }
 
- svg {
+svg {
   width: 20px;
   height: 20px;
- }
+}
 
- .card-footer {
+.card-footer {
   width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding-top: 10px;
-  gap: .5em;
+  gap: 0.5em;
   flex-wrap: wrap;
   border-top: 1px solid #ddd;
- }
+}
 
- .right-footer{
+.right-footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: .5em;
-
- }
- /*Text*/
- .text-title {
+  gap: 0.5em;
+}
+/*Text*/
+.text-title {
   font-weight: 900;
   font-size: 1.2em;
   align-self: flex-start;
   line-height: 1.5;
-  
- }
+  color: rgb(126 34 206 / 1);
+}
 
- .text-body {
-  font-size: .9em;
+.precio {
+  color: rgb(22 163 74 / 1) !important;
+}
+
+.text-body {
+  font-size: 0.9em;
   padding-bottom: 10px;
- }
+  color: rgb(126 34 206 / 1);
+}
 
- .quantity-controls{
+.quantity-controls {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: .5em;
- }
+  gap: 0.5em;
+}
 
-
- .quantity-input{
+.quantity-input {
   width: 40px;
   height: 20px;
   display: flex;
@@ -294,10 +296,9 @@ width: 100%;
   font-weight: 800;
   outline: none;
   background-color: transparent;
+}
 
- }
-
- .btn-control-sr{
+.btn-control-sr {
   width: 20px;
   height: 20px;
   text-align: center;
@@ -307,42 +308,54 @@ width: 100%;
   background-color: var(--color-3);
   border-radius: 5px;
   cursor: pointer;
- }
- .btn-increment{
+}
+.btn-increment {
   border: 1px solid var(--color-texto-1);
   color: var(--color-2);
   background-color: var(--color-1);
- }
+}
 
-
- /*Button*/
- .card-button {
-  border: 1px solid #252525;
+/*Button*/
+.card-button {
+  border: 0px solid #e9c300;
   display: flex;
-  padding: .3em;
+  padding: 0.5rem 1rem;
   align-self: flex-end;
   justify-self: flex-end;
   cursor: pointer;
-  border-radius: 50px;
-  transition: .3s ease-in-out;
- }
+  border-radius: calc(0.5rem - 2px);
+  transition: 0.3s ease-in-out;
+  background-color: #22c55e;
+  align-items: center;
+  color: #fff;
+  font-size: 0.875rem;
+  gap: 0.5rem;
+  line-height: 1.25rem;
+}
 
- /*Hover*/
- .card-img:hover {
+/*Hover*/
+.card-img:hover {
   transform: translateY(-5%);
-  box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
- }
+  box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px,
+    rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
+}
 
- .card-button:hover {
+.card-button:hover {
+  box-shadow: 0px 4px 7px 0px rgb(0 0 0 / 22%);
+}
+.card-button i {
+  transition: 0.2s ease;
+}
 
-  background-color: var(--color-1);
- }
+.card-button:hover i {
+  scale: 1.07;
+}
 
 /* FIN DE CONTENIDO DEL LAS OPCIONES */
 /* FIN CONTENIDO INICIAL */
 
 /* MODAL LOGIN USER */
-.cont-login-user{
+.cont-login-user {
   z-index: 1;
   display: none;
   position: absolute;
@@ -354,7 +367,7 @@ width: 100%;
   height: 100%;
   backdrop-filter: blur(3px);
 }
-.cont-login{
+.cont-login {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -365,8 +378,12 @@ width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: #F8F9FD;
-  background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(244, 247, 251) 100%);
+  background: #f8f9fd;
+  background: linear-gradient(
+    0deg,
+    rgb(255, 255, 255) 0%,
+    rgb(244, 247, 251) 100%
+  );
   border-radius: 10px;
   padding: 10px;
   border: 5px solid rgb(255, 255, 255);
@@ -383,13 +400,13 @@ width: 100%;
   font-size: 25px;
   color: rgb(16, 137, 211);
 }
-.ekis{
+.ekis {
   color: #0099ff;
   cursor: pointer;
   border: 1px solid var(--color-1);
   border-radius: 100%;
 }
-.ekis:hover{
+.ekis:hover {
   color: white;
   background-color: var(--color-1);
 }
@@ -422,7 +439,7 @@ width: 100%;
 
 .form .input:focus {
   outline: none;
-  border-inline: 2px solid #12B1D1;
+  border-inline: 2px solid #12b1d1;
 }
 
 .form .forgot-password {
@@ -442,7 +459,11 @@ width: 100%;
   width: 100%;
   font-size: 16px;
   font-weight: bold;
-  background: linear-gradient(45deg, rgb(16, 137, 211) 0%, rgb(18, 177, 209) 100%);
+  background: linear-gradient(
+    45deg,
+    rgb(16, 137, 211) 0%,
+    rgb(18, 177, 209) 100%
+  );
   color: white;
   padding-block: 10px;
   margin-top: 20px;
@@ -463,7 +484,6 @@ width: 100%;
   box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 15px 10px -10px;
 }
 
-
 .agreement {
   display: block;
   text-align: center;
@@ -478,7 +498,7 @@ width: 100%;
 /* TERMINA MODAL LOGIN USER */
 
 /* MODAL CERRAR SESSION Y OPCIONES */
-.cont-perfil-user{
+.cont-perfil-user {
   display: none;
   flex-direction: column;
   align-items: center;
@@ -496,7 +516,7 @@ width: 100%;
   border-radius: 20px 0px 20px 20px;
   height: max-content;
 }
-.Euser{
+.Euser {
   position: absolute;
   font-size: 26px;
   color: var(--color-3);
@@ -505,23 +525,22 @@ width: 100%;
   margin-right: -19em;
   margin-top: -2em;
   cursor: pointer;
-  transform: .5s ease;
+  transform: 0.5s ease;
 }
-.cont-data-user{
+.cont-data-user {
   display: flex;
-  gap: .5em;
+  gap: 0.5em;
   font-size: 35px;
   align-items: center;
   color: var(--color-texto-1);
 }
-.nameuser-text{
+.nameuser-text {
   text-align: center;
   color: var(--color-texto-1);
   font-size: 16px;
   font-weight: 800;
-
 }
-.btn-mdl-user{
+.btn-mdl-user {
   display: flex;
   width: 65%;
   padding: 5px 15px 5px 15px;
@@ -537,19 +556,17 @@ width: 100%;
   border: 2px solid var(--color-texto-1);
   cursor: pointer;
 }
-.btn-mdl-user:hover{
+.btn-mdl-user:hover {
   color: var(--color-1);
   background-color: var(--color-2);
   border: 2px solid var(--color-texto-1);
 }
-.contra{
+.contra {
   background-color: var(--color-3);
 }
-.contra:hover{
+.contra:hover {
   color: var(--color-3);
 }
-
-
 
 /* TERMINA MODAL OPCIONES Y CERRAR SESION *
 
@@ -557,7 +574,7 @@ width: 100%;
 
 
 /* MODAL CERRAR SESSION Y OPCIONES */
-.cont-carrito-modal{
+.cont-carrito-modal {
   display: none;
   flex-direction: column;
   align-items: center;
@@ -575,7 +592,7 @@ width: 100%;
   border-radius: 20px 0px 20px 20px;
   height: max-content;
 }
-.Mcarrito{
+.Mcarrito {
   position: absolute;
   font-size: 26px;
   color: var(--color-3);
@@ -584,9 +601,9 @@ width: 100%;
   margin-right: -39.7em;
   margin-top: -1.7em;
   cursor: pointer;
-  transform: .5s ease;
+  transform: 0.5s ease;
 }
-.cont-result-carrito{
+.cont-result-carrito {
   display: flex;
   flex-direction: column;
   width: 70%;
@@ -596,38 +613,36 @@ width: 100%;
   justify-content: center;
   box-shadow: var(--sombra);
   color: var(--color-texto-1);
-
 }
-.encabezado-car{
+.encabezado-car {
   display: flex;
   flex-direction: column;
   width: 100%;
   border-radius: 10px 10px 0px 0px;
   align-items: center;
-  gap: .5em;
+  gap: 0.5em;
   justify-content: center;
   background-color: var(--color-2);
   padding: 15px 0px 1px 0px;
   box-shadow: var(--sombra);
 }
-.canastilla{
+.canastilla {
   font-size: 35px;
 }
 
-.cont-car-pag{
+.cont-car-pag {
   display: flex;
   gap: 1em;
   width: 100%;
 }
 
-.table-enca-car{
+.table-enca-car {
   display: flex;
   font-size: 15px;
   width: 100%;
   font-weight: 800;
-
 }
-.datos-product{
+.datos-product {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -635,45 +650,44 @@ width: 100%;
   font-weight: 200;
   width: 45%;
 }
-.cantidad-product{
+.cantidad-product {
   display: flex;
   justify-content: center;
   width: 20%;
   font-size: 13px;
   font-weight: 200;
 }
-.precio-product{
+.precio-product {
   display: flex;
   justify-content: center;
   width: 12%;
   font-size: 13px;
   font-weight: 200;
 }
-.cont-carrito-scroll{
+.cont-carrito-scroll {
   display: flex;
   width: 100%;
   height: 27em;
   overflow-y: scroll;
   border-radius: 0px 0px 10px 10px;
-
 }
-.cont-carrito{
+.cont-carrito {
   display: flex;
   flex-direction: column;
   flex: 1;
   padding: 10px;
-  gap: .6em;
+  gap: 0.6em;
   height: max-content;
 }
-.carrito-card{
+.carrito-card {
   display: flex;
   background-color: var(--color-2);
   padding: 5px;
-  gap: .6em;
+  gap: 0.6em;
   border-radius: 10px;
   box-shadow: var(--sombra);
 }
-.img-producto-car{
+.img-producto-car {
   width: 60px;
   border-radius: 5px;
   display: flex;
@@ -681,72 +695,71 @@ width: 100%;
   align-items: center;
   box-shadow: var(--sombra);
 }
-.cont-name-descripcion{
+.cont-name-descripcion {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: .1em;
+  gap: 0.1em;
   width: 40%;
 }
-.name-producto{
+.name-producto {
   font-size: 17px;
   font-weight: 700;
 }
-.descrip-producto{
+.descrip-producto {
   font-size: 15px;
 }
-.cantidad-precio{
+.cantidad-precio {
   display: flex;
   align-items: center;
   gap: 2.5em;
   width: 45%;
 }
-.Ncantidad{
+.Ncantidad {
   font-size: 12px;
   font-weight: 800;
 }
-.cont-precio-car{
+.cont-precio-car {
   display: flex;
   flex: 1;
   padding-right: 1em;
   justify-content: space-between;
   align-items: center;
 }
-.cont-precios{
+.cont-precios {
   display: flex;
   flex-direction: column;
 }
 
-.valor-precio{
+.valor-precio {
   font-size: 14.5px;
   display: flex;
   font-weight: 600;
-
 }
-.precio-anterior{
+.precio-anterior {
   font-size: 11px;
   font-weight: 600;
   text-decoration: line-through;
   color: var(--color-3);
 }
-.pruni{
+.pruni {
   color: var(--color-4);
   text-decoration: none;
 }
-.basury{
+.basury {
   color: var(--color-texto-1);
   cursor: pointer;
   font-size: 20px;
 }
 
-.mensajeRespuesta{
+.mensajeRespuesta {
   display: flex;
   justify-content: center;
   width: 100%;
   margin-top: 20px;
 }
 
-.cont-pasarela{
+.cont-pasarela {
   display: flex;
   width: 45%;
   border-radius: 10px;
